--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <!-- home -->
-<ActionBar *ngIf="router.url === '/'" flat="true" title="Danh sách công việc">
+<ActionBar *ngIf="router.url === '/'" flat="true" title="Công việc">
     <ActionItem text="About" [nsRouterLink]="['/about']" ios.systemIcon="16" ios.position="right" android.position="popup">
     </ActionItem>
     <ActionItem ios.systemIcon="4" android.systemIcon="ic_menu_add" ios.position="right" [nsRouterLink]="['/add']">
