--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -5,7 +5,8 @@
     <GridLayout class="grid-container" rows="auto,auto,auto,auto,auto,auto,auto,auto,auto" columns="*,*">
         <!-- title -->
         <Label row="0" col="0" colspan="2" text="Công việc"></Label>
-        <TextView row="1" col="0" colspan="2" required hint="Thêm công việc..." [(ngModel)]="task_name" fontSize="16px" borderColor="gray" height="40"></TextView>
+        <TextView row="1" col="0" colspan="2" style="margin-top: 15px" borderColor="gray" borderWidth="1" borderRadius="10" height="40" 
+        hint=" Thêm công việc..."  class="input input-border" [(ngModel)]="task_name"></TextView>
         
         <!-- due date -->
         <Label row="2" col="0" colspan="2" text="Ngày đến hạn"></Label>
@@ -27,29 +28,34 @@
         <Label row="5" col="0" colspan="2" text="Mô tả" ></Label>
         <TextView row="6" col="0" colspan="2" style="margin-top: 15px" borderColor="gray" borderWidth="1" borderRadius="10" height="auto" 
         hint=" Thêm mô tả..."  class="input input-border" [(ngModel)]="task_detail"></TextView>
-        <DockLayout stretchLastChild="true" row="7" col="0" colspan="2">
-            <Button class="add-image-btn" dock="left" text="Thêm hình ảnh" (tap)="toggleVisible()"></Button>
-            <Button text="Camera" class="fas camera btn" dock="left" (tap)="takePhoto()" visibility="{{ showButtons ? 'visible' : 'collapsed' }}">
-            </Button>
-            <Button text="Thư viện" class="fas picture btn" dock="left" visibility="{{ showButtons ? 'visible' : 'collapsed' }}" (tap)="pickPhoto()">
-            </Button>
-        </DockLayout>
 
         <!-- photo -->
-        <ScrollView row="8" col="0" colSpan="2" orientation="horizontal">
-            <StackLayout orientation="horizontal" *ngIf="hasImage">
-                <GridLayout *ngFor="let photo of task_photo" rows="*" columns="auto,20">
-                    <CardView margin="5" elevation="10" radius="25" horizontalAlignment="left">
-                        <Image row="0" col="0" [src]="photo" height="120" width="auto" (tap)="photoViewer(photo)"></Image>
-                    </CardView>
-                    <Button row="0" col="1" text="x" class="fas delete" width="20" height="20" 
-                        (tap)="deletePhoto(photo)" verticalAlignment="top">
-                    </Button>
-                </GridLayout>
-            </StackLayout>
-        </ScrollView>
+        <StackLayout row = "7" col="0" colSpan="2">
+            <DockLayout stretchLastChild="true" row="1" col="0" colspan="2">
+                <Button class="add-image-btn" dock="left" text="Thêm hình ảnh" (tap)="toggleVisible()"></Button>
+                <Button text="Camera" class="fas camera btn" dock="left" (tap)="takePhoto()" visibility="{{ showButtons ? 'visible' : 'collapsed' }}">
+                </Button>
+                <Button text="Thư viện" class="fas picture btn" dock="left" visibility="{{ showButtons ? 'visible' : 'collapsed' }}" (tap)="pickPhoto()">
+                </Button>
+            </DockLayout>
+
+            
+            <ScrollView row="2" col="0" colSpan="2" orientation="horizontal">
+                <StackLayout orientation="horizontal" *ngIf="hasImage">
+                    <GridLayout *ngFor="let photo of task_photo" rows="*" columns="auto,20">
+                        <CardView margin="5" elevation="10" radius="25" horizontalAlignment="left">
+                            <Image row="0" col="0" [src]="photo" height="120" width="auto" (tap)="photoViewer(photo)"></Image>
+                        </CardView>
+                        <Button row="0" col="1" text="x" class="fas delete" width="20" height="20" 
+                            (tap)="deletePhoto(photo)" verticalAlignment="top">
+                        </Button>
+                    </GridLayout>
+                </StackLayout>
+            </ScrollView>
+        </StackLayout>    
     </GridLayout>
 
     <Button class="add task" text="Lưu" (tap)="add()"></Button>
+    
 </StackLayout>
 </ScrollView>
