--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
 <ActionBar *ngIf="router.url === '/'" flat="true" title="Công việc">
     <ActionItem text="About" [nsRouterLink]="['/about']" ios.systemIcon="16" ios.position="right" android.position="popup">
     </ActionItem>
-    <ActionItem ios.systemIcon="4" android.systemIcon="ic_search" ios.position="right" [nsRouterLink]="['/add']">
+    <ActionItem ios.systemIcon="4" android.systemIcon="ic_search" ios.position="right" [nsRouterLink]="['/search']">
     </ActionItem>
 </ActionBar>
 
